--- a/public/assets/css/style.css
+++ b/public/assets/css/style.css
@@ -9,3 +9,9 @@ header {
   height: 150px;
   padding-top: 50px;
 }
+h1{
+  margin-top: -25px;
+  font-size: 5rem;
+  text-shadow: 5px 5px gray;
+}
+
