added application help, demo link

--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -3,7 +3,7 @@
 </header>
 
 <div class="container mt-5">
-    <img src="https://media.giphy.com/media/TiUiqGzH4E1A0pjmAi/giphy.gif" class="burger-img" alt="burger">   
+    <img src="https://media.giphy.com/media/TiUiqGzH4E1A0pjmAi/giphy.gif" class="burger-img" alt="burger">
     <img src="https://i.gifer.com/tbb.gif" class="burger-img" alt="cat dancing">
     <div class="row">
         <div class="col"><br>
@@ -35,15 +35,18 @@
             <input type="text" id="ca" name="name">
         </div>
         <div class="form-group">
-           <h4> <label for="devoured">Devoured?</label><br></h4>
-           <h6> <input type="radio" name="devoured" value="1" checked> Devoured !
-            <input type="radio" name="devoured" value="0"> Devour !</h6>
+            <h4> <label for="devoured">Devoured?</label><br></h4>
+            <h6> <input type="radio" name="devoured" value="1" checked> Devoured !
+                <input type="radio" name="devoured" value="0"> Devour !</h6>
         </div>
-        <button class="myButton" type="submit">Add Burger</button>        
-    </form>    
+        <button class="myButton" type="submit">Add Burger</button>
+    </form>
 </div>
 <footer>
-    <nav class="footer">
-    <div class="footer-text">&copy;Copyright-Ram Sah.</div>
-  </nav>
+    <div style="text-align: center;">
+        <a href="https://github.com/ram-sah/eat-da-burger#Application-Demo" target="_blank">
+            NEED HELP? Application Demo</a></div><br>
+    <nav class="footer-text" style="text-align: center;">Copyright &copy; 2020
+        <a href="https://github.com/ram-sah" target="_blank">Ram-Sah</a>
+    </nav>
 </footer>
