--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -6,7 +6,7 @@
     <img src="https://media.giphy.com/media/TiUiqGzH4E1A0pjmAi/giphy.gif" class="burger-img" alt="burger">
     <img src="https://i.gifer.com/tbb.gif" class="burger-img" alt="cat dancing">
     <div class="row">
-        <div class="col"><br>
+        <div class="col-sm-9 col-lg-6"><br>
             <h2>Burgers ready!</h2><br>
             <ul>
                 {{#each burgers}}
@@ -16,7 +16,7 @@
                 {{/each}}
             </ul>
         </div>
-        <div class="col"><br>
+        <div class="col-sm-9 col-lg-6"><br>
             <h2>Devoured burgers!</h2><br>
             <ul>
                 {{#each burgers}}
